Added token, post list

--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
 DB_CONNECTION=mongodb+srv://admin:admin@cluster0-x5nj5.gcp.mongodb.net/test?retryWrites=true&w=majority
+SECRET_TOKEN = lKsdmlewxkjedn
